# pycon_2023

./: .gitignore  .vimrc  click.py  fire_example.py  pyproject.toml
copilot/: test.py  test.rb
model_prediction_server/: README.md
model_prediction_server/app/: main.py  ml_model.py  pydantic_models.py
model_prediction_server/app.egg-info/: SOURCES.txt
model_prediction_server/tests/: test_endpoints.py  test_model.py
pickling/: dog_pickeled_in_3_11.pkl  main.py
stable_diffusion/: main.py
